2004-05-15  ------ omnetpp-3.0a4 released ------

2004-05-13  Andras Varga

	* ned.lex: recognize hex numbers as INTCONSTANT

2004-03-22  ------ omnetpp-3.0a3 released ------

FIXME: input() with expression as default value is handled wrong

2004-03-06  Andras Varga

	* added support for enum declarations <enum-decl>

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-20  Andras Varga

	* cppgenerator.cc: implemented cChannel && cChannelType; several
	refinements in generated code

	* ned.dtd, ebnf.y: added support for "mod.out++ --> in++" connection
	syntax,	where "++" causes the first, yet unconnected gate to be used,
	and (with submodule gate vectors) it also expands the vector if 
	necessary, so "gatesizes:" is not needed. Gate vectors of the parent
	module cannot be expanded further (because network is built and
	connected top-down.)

	* cppgenerator.cc, cppexprgenerator.cc: several bugfixes in the 
	generated code

2004-02-11  Andras Varga

	* ned.y: didn't accept negative numbers and symbolic constants in
	msg files as field and enum values

2004-02-04  ------ omnetpp-3.0pre1 released ------

2003-10-19  Andras Varga

	* nedelement.cc/h: added userdata field which makes it possible
	to attach additional data to NEDElement objects (needed for GNED)

2003-08-30  Andras Varga

	* ned.dtd: storing of "like" parameters changed (attribute @like-param
	introduced)

	* ned.dtd: const/@value made optional (because we cannot distinguish 
	empty attribute ("") and missing attribute, and "" string constant 
	caused validation error).

2003-07-31  Andras Varga

	* updated for current syntax of message declarations (dtd change)

2003-07-27  Andras Varga

	* ned.dtd: added source-code attribute to top-level elements; this 
	is useful for documentation generation.

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2002-11-30  Andras Varga
