@@ -1,3 +1,8 @@
+2004-06-07  Andras Varga
+
+	* cppgenerator.cc: wrong C++ code was generated for "const" parameters
+	[reported by Julien Cartigny]
+
 2004-05-15  ------ omnetpp-3.0a4 released ------
 
 2004-05-13  Andras Varga
